# OpenCV_Utils

./: .gitignore  BaseTypes.cc  BaseTypes.hh  CMakeLists.txt  CXXWarnings.cmake  ClickGetter.cc  ClickGetter.hh  CodeVersion.cc  CollectPoints.cc  DefaultBuildType.cmake  Downsample.hh  FilterStack.hh  GitRepoTag.cmake  Makefile  MarkSet.hh  OCV_Test.cc  PerspectiveFilter.cc  ScaleFilter.cc  TODO.txt  TransformView.cc  TransformView.hh  VTransformFilter.cc  VTransformFilter.hh  ZoomView.cc  ZoomView.hh  bubblescans.py
core/: BaseTypes.hh  ClickGetter.cc  ClickGetter.hh  CodeVersion.hh  Downsample.hh  PerspectiveFilter.hh  ScaleFilter.hh  TransformView.cc  VTransformFilter.hh
exec/: CMakeLists.txt  CollectPoints.cc  OCV_Test.cc  RawLight.cc
raw/: QuadLayers.cc  QuadLayers.hh
